add circle and opacity mixins, change breakpoint var names

--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -65,62 +65,69 @@ $transitionduration: .3s;
    ========================================================================== */ 
 
 @mixin fontsize($size:1.6, $line: $size * 1.5){
-    font-size:   ($size * 10) + px;
-    line-height: ($line * 10) + px;
-    font-size:   $size + rem;
+   font-size:   ($size * 10) + px;
+   line-height: ($line * 10) + px;
+   font-size:   $size + rem;
   	line-height: $line + rem;
 }
 @mixin rgba($type, $color, $percentage) {
-    @if $type == color {
+   @if $type == color {
       color: transd($color, $percentage);
       color: rgba($color, $percentage);
     }
-    @if $type == bg {
+   @if $type == bg {
       background-color: transd($color, $percentage);
       background-color: rgba($color, $percentage);
-    }
+   }
 }
+@mixin circle {
+   @include border-radius(100%);
+}
+@mixin opacity($opacity) {
+   opacity: $opacity;
+   filter: alpha(opacity=($opacity * 100));
+ }
 @mixin display-flex {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
+   display: -webkit-box;
+   display: -moz-box;
+   display: -ms-flexbox;
+   display: -webkit-flex;
+   display: flex;
 }
 @mixin display-flex-old {
-    -webkit-box-orient: vertical;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
+   -webkit-box-orient: vertical;
+   -webkit-flex-direction: column;
+   -ms-flex-direction: column;
+   flex-direction: column;
 }
 @mixin align-items($value: stretch) {
-    @if $value == flex-start {
-        -webkit-box-align: start;
-        -ms-flex-align: start;
+   @if $value == flex-start {
+      -webkit-box-align: start;
+      -ms-flex-align: start;
     } @else if $value == flex-end {
-        -webkit-box-align: end;
-        -ms-flex-align: end;
+      -webkit-box-align: end;
+      -ms-flex-align: end;
     } @else {
-        -webkit-box-align: $value;
-        -ms-flex-align: $value;
+      -webkit-box-align: $value;
+      -ms-flex-align: $value;
     }
     -webkit-align-items: $value;
     -moz-align-items: $value;
     align-items: $value;
 }
 @mixin flex-direction($value: row) {
-    @if $value == row-reverse {
-        -webkit-box-direction: reverse;
-        -webkit-box-orient: horizontal;
-    } @else if $value == column {
-        -webkit-box-direction: normal;
-        -webkit-box-orient: vertical;
-    } @else if $value == column-reverse {
-        -webkit-box-direction: reverse;
-        -webkit-box-orient: vertical;
-    } @else {
-        -webkit-box-direction: normal;
-        -webkit-box-orient: horizontal;
+   @if $value == row-reverse {
+      -webkit-box-direction: reverse;
+      -webkit-box-orient: horizontal;
+   } @else if $value == column {
+      -webkit-box-direction: normal;
+      -webkit-box-orient: vertical;
+   } @else if $value == column-reverse {
+      -webkit-box-direction: reverse;
+      -webkit-box-orient: vertical;
+   } @else {
+      -webkit-box-direction: normal;
+      -webkit-box-orient: horizontal;
     }
     -webkit-flex-direction: $value;
     -moz-flex-direction: $value;
@@ -128,16 +135,16 @@ $transitionduration: .3s;
     flex-direction: $value;
 }
 @mixin flex($fg: 1, $fs: null, $fb: null) { 
-    $fg-boxflex: $fg;
-    @if type-of($fg) == 'list' {
-    $fg-boxflex: nth($fg, 1);
-    }
-    -webkit-box-flex: $fg-boxflex;
-    -webkit-flex: $fg $fs $fb;
-    -moz-box-flex: $fg-boxflex;
-    -moz-flex: $fg $fs $fb;
-    -ms-flex: $fg $fs $fb;
-    flex: $fg $fs $fb;
+   $fg-boxflex: $fg;
+   @if type-of($fg) == 'list' {
+      $fg-boxflex: nth($fg, 1);
+   }
+   -webkit-box-flex: $fg-boxflex;
+   -webkit-flex: $fg $fs $fb;
+   -moz-box-flex: $fg-boxflex;
+   -moz-flex: $fg $fs $fb;
+   -ms-flex: $fg $fs $fb;
+   flex: $fg $fs $fb;
 }
 
 /* Fonts */
@@ -148,22 +155,19 @@ $transitionduration: .3s;
 /* Breakpoints */
 
 @mixin bp($point) {
-    @if $point == desktopsmall {
-        @media (max-width: 1050px) { @content; }
-    }
-    @else if $point == tabletlarge {
-        @media (max-width: 900px) { @content; }
-    }
-    @else if $point == tablet {
-        @media (max-width: 768px)  { @content; }
-    }
-    @else if $point == tabletmobilefirst {
-        @media (min-width: 767px)  { @content; }
-    }
-    @else if $point == tabletsmall {
-        @media (max-width: 600px)  { @content; }
-    }
-    @else if $point == mobile {
-        @media (max-width: 400px)  { @content; }
-    }
+   @if $point == xl {
+      @media (max-width: 1050px) { @content; }
+   }
+   @else if $point == lg {
+      @media (max-width: 900px) { @content; }
+   }
+   @else if $point == md {
+      @media (max-width: 768px)  { @content; }
+   }
+   @else if $point == sm {
+      @media (max-width: 600px)  { @content; }
+   }
+   @else if $point == xs {
+      @media (max-width: 400px)  { @content; }
+   }
 }
