--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -86,7 +86,7 @@ $transitionduration: .3s;
 @mixin opacity($opacity) {
    opacity: $opacity;
    filter: alpha(opacity=($opacity * 100));
- }
+}
 @mixin display-flex {
    display: -webkit-box;
    display: -moz-box;
@@ -145,6 +145,35 @@ $transitionduration: .3s;
    -moz-flex: $fg $fs $fb;
    -ms-flex: $fg $fs $fb;
    flex: $fg $fs $fb;
+}
+
+/* Buttons */
+
+@mixin button($fontsize, $bgcolor, $fontcolor, $padding) {
+   background: $bgcolor;
+   border: none;
+   cursor: pointer;
+   display: block;
+   height: auto;
+   margin: 0;
+   overflow: hidden;
+   text-decoration: none;
+   text-decoration: none;
+   text-transform: uppercase;
+   @include secondaryfont();
+   @include fontsize($fontsize,$fontsize);
+   color: $fontcolor;
+   padding: $padding;
+   @include transition-duration($transitionduration);
+   &:hover {
+      background: lighten($bgcolor, 6%);
+      color: $fontcolor;
+      text-decoration: none;
+   }
+   &:active {
+      @include box-shadow(inset 0 0 6px rgba(0,0,0,.5));
+      outline: none;
+   }
 }
 
 /* Fonts */
