--- a/assets/sass/_forms.scss
+++ b/assets/sass/_forms.scss
@@ -42,14 +42,14 @@ textarea:focus {
 }
 textarea, .textarea {
 	width: 100%;
-	@include bp("tablet") {
+	@include bp(md) {
 		width: 100%;
 	}
 }
 input.text { width: 100%; }
 .text, .email {
 	width: 50%;
-	@include bp("tablet") {
+	@include bp(md) {
 		width: 100%;
 	}
 }
@@ -69,7 +69,7 @@ input.text { width: 100%; }
    display: inline-block; zoom:1; *display: inline;
    vertical-align: bottom;
    font-size: 0;
-   @include bp("tablet") {
+   @include bp(md) {
     	margin-right: 0;
    }
 }
