--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -31,7 +31,6 @@ dl {
 	overflow: hidden;
 	dt, dd{
 		float: left;
-		@include box-sizing("border-box");
 	}
 	dt {
 		font-weight: 700;
@@ -46,7 +45,7 @@ dl {
 		padding-left: 20px;
 		width: 70%;
 	} 
-	@include bp("tablet") {
+	@include bp(md) {
 		dt, dd {
 			float: none;
 			text-align: left;
@@ -68,7 +67,7 @@ ul.three-cols {
 	@include column-count(3);
 	@include column-gap(20px);
 	margin: 0 0 20px 0;
-	@include bp("tablet") {
+	@include bp(md) {
 		margin: 0 0 20px 20px;
 		@include column-count(1);
 		@include column-gap(0);
@@ -78,7 +77,7 @@ ul.two-cols {
 	@include column-count(2);
 	@include column-gap(20px);
 	margin: 0 0 20px 0;
-	@include bp("tablet") {
+	@include bp(md) {
 		margin: 0 0 20px 20px;
 		@include column-count(1);
 		@include column-gap(0);
