Adding some typographic helper classes

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -445,6 +445,10 @@ figcaption:before, cite:before {
 	text-align: center;
 	width: 90%;
 }
+.primary-color { color: $primarycolor; }
+.secondary-color { color: $secondarycolor; }
+.reversed { color: #fff; }
+.allcaps { text-transform: uppercase; }
 
 
 
