--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -87,6 +87,58 @@ $transitionduration: .3s;
    opacity: $opacity;
    filter: alpha(opacity=($opacity * 100));
 }
+@mixin absolutecenter($axis: "both"){
+   position:absolute;
+   @if $axis == "y"{
+      top: 50%;
+      @include translateY(-50%);
+   }
+   @if $axis == "x"{
+      left: 50%;
+      @include translateX(-50%);
+   }
+   @if $axis == "both"{
+      top: 50%;
+      left: 50%;
+      @include translate(-50%,-50%);
+   }
+}
+@mixin triangle($direction, $size: 6px, $color: #222){
+   content: '';
+   display: block;
+   position: absolute;
+   height: 0; width: 0;
+   @if ($direction == 'up'){
+      border-bottom: $size solid $color;
+      border-left: 1/2*$size solid transparent;
+      border-right: 1/2*$size solid transparent;
+   }
+   @else if ($direction == 'down'){
+      border-top: $size solid $color;
+      border-left: 1/2*$size solid transparent;
+      border-right: 1/2*$size solid transparent;
+   }
+   @else if ($direction == 'left'){
+      border-top: 1/2*$size solid transparent;
+      border-bottom: 1/2*$size solid transparent;
+      border-right: $size solid $color;
+   }
+   @else if ($direction == 'right'){
+      border-top: 1/2*$size solid transparent;
+      border-bottom: 1/2*$size solid transparent;
+      border-left: $size solid $color;
+   }
+}
+@mixin cf() {
+   *zoom: 1;
+   &:before, &:after {
+      content: '';
+      display: table;
+   }
+   &:after {
+      clear: both;
+   }
+}
 @mixin display-flex {
    display: -webkit-box;
    display: -moz-box;
