--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -63,25 +63,38 @@ dl {
 
 /* Simple CSS3 Columns */
 
-ul.three-cols {
-	@include column-count(3);
-	@include column-gap(20px);
-	margin: 0 0 20px 0;
-	@include bp(md) {
-		margin: 0 0 20px 20px;
-		@include column-count(1);
-		@include column-gap(0);
-	}
+ul.three-col-list {
+  margin: 0 -10px 40px -10px;
+  padding: 0;
+  @include cf();
+  li {
+    float: left;
+    width: 33.3333333%;
+    list-style: none;
+    margin: 0 0 10px 0;
+    padding: 0 10px;
+    @include bp(md) {
+      float: none;
+      width: 100%;
+    }
+  }
 }
-ul.two-cols {
-	@include column-count(2);
-	@include column-gap(20px);
-	margin: 0 0 20px 0;
-	@include bp(md) {
-		margin: 0 0 20px 20px;
-		@include column-count(1);
-		@include column-gap(0);
-	}
+
+ul.two-col-list {
+  margin: 0 -10px 40px -10px;
+  padding: 0;
+  @include cf();
+  li {
+    float: left;
+    width: 50%;
+    list-style: none;
+    margin: 0 0 10px 0;
+    padding: 0 10px;
+    @include bp(md) {
+      float: none;
+      width: 100%;
+    }
+  }
 }
 
 /* Buttons */
