--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -186,6 +186,36 @@ $transitionduration: .4s;
     width: 100%;
   }
 }
+@mixin ghostbutton($fontsize, $bordercolor, $spacing) {
+  border: 1px solid $bordercolor;
+  @include border-radius(3px);
+  cursor: pointer;
+  display: inline-block;
+  height: auto;
+  margin: 0;
+  overflow: hidden;
+  text-decoration: none;
+  text-align: center;
+  @include secondaryfont();
+  @include font-size($fontsize);
+  @include line-height($fontsize);
+  color: $bordercolor;
+  padding: $spacing;
+  @include transition-duration($transitionduration);
+  &:hover {
+    background: $bordercolor;
+    color: #fff;
+    text-decoration: none;
+  }
+  &:active {
+    @include box-shadow(inset 0 0 6px rgba(0,0,0,.5));
+    outline: none;
+  }
+  @include bp(md) {
+    display: block;
+    width: 100%;
+  }
+}
 
 /* Fonts */
 
