--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -106,12 +106,14 @@ ul.three-col-list {
 /* Buttons */
 
 .button, .action, input[type=submit] {
-	@include button(1.8, $primarycolor, #fff, 20px 50px)
+	@include button(1.8, $primarycolor, #fff, 20px 50px);
 }
 .secondary-button {
-	@include button(1.8, $secondarycolor, #fff, 20px 50px)
+	@include button(1.8, $secondarycolor, #fff, 20px 50px);
 }
-
+.ghost-button {
+  @include ghostbutton(1.7, $primarycolor, 16px 40px)
+}
 
 /* Pagination */
 
