Fixing font stuff on button mixin

--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -168,7 +168,8 @@ $transitionduration: .4s;
   text-align: center;
   text-transform: uppercase;
   @include secondaryfont();
-  @include fontsize($fontsize,$fontsize);
+  @include font-size($fontsize);
+  @include line-height($fontsize);
   color: $fontcolor;
   padding: $padding;
   @include transition-duration($transitionduration);
