Improving border box reset

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -8,6 +8,18 @@
 
 
 /* ==========================================================================
+   Reset Stuff
+   ========================================================================== */ 
+
+html {
+  @include box-sizing(border-box);
+}
+*, *:before, *:after {
+  @include box-sizing(inherit);
+}
+
+
+/* ==========================================================================
    Reusable Components
    ========================================================================== */ 
 
@@ -261,12 +273,6 @@ hr {
 /* ==========================================================================
    Base Styles
    ========================================================================== */ 
-
-/* Global Styles */
-
-*, *:before, *:after {
-	@include box-sizing("border-box");
-}
 
 /* Embeds */
 
