Adding scss imports for jeet and normalize

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -3,6 +3,8 @@
    ========================================================================== */ 
 
 @import "compass";
+@import '../../../../bower_components/normalize-scss/normalize';
+@import '../../../../bower_components/jeet.gs/scss/jeet/index';
 @import "settings";
 @import "forms";
 
