--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -58,6 +58,17 @@ $successcolor_verylight: lighten($successcolor, 55%);
 /* Functionality / Structure */
 
 $transitionduration: .4s;
+$spacing: 5%;
+$spacing-sm: $spacing * .75;
+$spacing-lg: $spacing * 2;
+$spacing-fixed: 30px;
+$spacing-fixed-sm: $spacing-fixed * .7;
+$spacing-fixed-xs: $spacing-fixed * .4;
+$spacing-fixed-lg: $spacing-fixed * 1.5;
+$maxwidth: 1200px;
+$maxwidth-lg: $maxwidth * 1.2;
+$maxwidth-sm: $maxwidth * .8;
+$maxwidth-xs: $maxwidth * .4;
 
 
 /* ==========================================================================
@@ -182,6 +193,9 @@ $transitionduration: .4s;
     @include box-shadow(inset 0 0 6px rgba(0,0,0,.5));
     outline: none;
   }
+  &:visited {
+    color: $fontcolor;
+  }
   @include bp(md) {
     display: block;
     width: 100%;
@@ -211,6 +225,9 @@ $transitionduration: .4s;
   &:active {
     @include box-shadow(inset 0 0 6px rgba(0,0,0,.5));
     outline: none;
+  }
+  &:visited {
+    color: #fff;
   }
   @include bp(md) {
     display: block;
