Fixing paths and filenames

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -4,7 +4,7 @@
 
 @import "compass";
 @import '../../../../bower_components/normalize-scss/normalize';
-@import '../../../../bower_components/jeet.gs/scss/jeet/index';
+@import '../../../../bower_components/jeet/scss/jeet/index';
 @import "settings";
 @import "forms";
 
