Adding text color reverse vars to scss

--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -26,6 +26,13 @@ $textcolor_verystrong: darken($textcolor, 30%);
 $textcolor_subtle: lighten($textcolor, 10%);
 $textcolor_medsubtle: lighten($textcolor, 25%);
 $textcolor_verysubtle: lighten($textcolor, 40%);
+$textcolor_reversed: #eee;
+$textcolor_reversed_strong: lighten($textcolor_reversed, 10%);
+$textcolor_reversed_medstrong: lighten($textcolor_reversed, 20%);
+$textcolor_reversed_verystrong: lighten($textcolor_reversed, 30%);
+$textcolor_reversed_subtle: darken($textcolor_reversed, 10%);
+$textcolor_reversed_medsubtle: darken($textcolor_reversed, 25%);
+$textcolor_reversed_verysubtle: darken($textcolor_reversed, 40%);
 $offsetcolor: #cccccc;
 $offsetcolor_subtle: lighten($offsetcolor, 5%);
 $offsetcolor_medsubtle: lighten($offsetcolor, 10%);
