--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -182,43 +182,34 @@ ul.three-col-list {
 /* Pagination */
 
 .pagination {
-	border: 0;
-	clear: both;
-	@include font-size(1.5);
+  @include cf();
+  @include font-size(1.5);
   @include line-height(2.1);
-	margin: 40px 0 $spacing-fixed 0;
-	overflow: hidden;
-	padding: 0;
-	li {
-		border: 0;
-		display: inline-block; zoom:1; *display: inline;
-		list-style: none;
-		margin: 0 4px 0 0;
-		padding: 0;
-		a {
-			border: solid 1px $offsetcolor;
-			@include border-radius(3px);
-		}
-	}
-	.previous-off, .next-off { display: none; }
-	li.active {
-		background: $primarycolor;
-		border: solid 1px transparent;
-		color: #fff;
-		padding: 6px 12px 3px 12px;
-		@include border-radius(3px);
-	}
-	a:link, a:visited {
-		background: $offsetcolor_subtle;
-		display: block;
-		padding: 6px 10px 3px 10px;
-		text-decoration: none;
-	}
-	a:hover {
-		background: $secondarycolor;
-		border: solid 1px transparent;
-		color: #fff;
-	}
+  margin: 40px 0 ($spacing-fixed-lg - 6px) 0;
+  overflow: hidden;
+  padding: 0;
+  li {
+    display: inline-block;
+    list-style: none;
+    margin: 0 2px 6px 0;
+    padding: 0;
+  }
+  a {
+    @include primarybackground();
+    display: block;
+    padding: 6px 12px;
+    text-decoration: none;
+    color: $textcolor_subtle;
+    @include border-radius(3px);
+    @include transition-duration($transitionduration);
+  }
+  a:hover {
+    color: $textcolor_medstrong;
+  }
+  li.active a {
+    background: $primarycolor;
+    color: #fff;
+  }
 } 
 
 
